# pyruleanalyzer

./: .gitignore  README.md  dt_classifier.py  main.py  main_DT.py  main_RF.py  pyproject.toml  requirements.txt  rf_classifier.py  rule_classifier.py  setup.py
.github/workflows/: docs.yml
docs/: conf.py  formal_verification.rst  formal_verification_dt.rst  formal_verification_gbdt.rst  formal_verification_rf.rst  index.rst  installation.rst  pipeline_api.rst  pyruleanalyzer.rst  tutorial.rst
docs/api/: dt_analyzer.rst  gbdt_analyzer.rst  index.rst  rf_analyzer.rst  rule.rst  rule_classifier.rst
docs/tutorials/: arduino.rst  index.rst  (+2 more)
examples/: arduino_example.py  comprehensive_showcase.py  data_adjustment.py  datasets_benchmark.py  datasets_benchmark_example.py  edited_DT.py  edited_RF.py  execution_showcase.py  full_pipeline_example.py  main_DT.py  main_GBDT.py  main_RF.py  rule_classifier.py  simple_pipeline.py  sklearn_vs_ruleclassifier_DT.py  sklearn_vs_ruleclassifier_GBDT.py  sklearn_vs_ruleclassifier_RF.py  sklearn_vs_ruleclassifier_synthetic.py
files/: final_model.pkl  initial_model.pkl  output_classifier.txt  output_classifier_dt.txt  output_final_classifier.txt  output_final_classifier_dt.txt  rules_sklearn.txt  sklearn_model.pkl
pyruleanalyzer/: __init__.py  _accel.py  _tree_traversal.c  dt_analyzer.py  exporters.py  full_pipeline.py  gbdt_analyzer.py  parsers.py  pyruleanalyzer.py  rf_analyzer.py  rule_classifier.py
tests/: test_dt_invariants.py  test_gbdt_invariants.py  test_predict_batch.py  test_rf_invariants.py  verify_predict_batch.py
(+21 files in other folders)
