[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRuleAnalyzer"
version = "0.0.1"
description = ""
authors = [
    {name = "GrupoCybersegurancaVirtus"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.7"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
]
