[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyruleanalyzer"
version = "1.0.0"
description = ""
authors = [
    {name = "GrupoCybersegurancaVirtus"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.7"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib"
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex",
]
